--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
                 <div>
                   <div class=uk-panel id=module-0>
                     <ul class="uk-nav uk-nav-default">
-                      <li><a href="#firma" uk-scroll offset="-150" duration="800">About me</a></li>
+                      <li><a href="#summary" uk-scroll offset="-150" duration="800">About me</a></li>
                       <li><a href="#services" uk-scroll offset="-15" duration="800">Offer</a></li>
                       <li><a href="#testimonials" uk-scroll offset="0" duration="800">Testimonials</a></li>
                       <li><a href="#gallery" uk-scroll offset="-15" duration="800">Gallery</a></li>
@@ -58,7 +58,7 @@
                   </div>
                   <div class=uk-navbar-right>
                     <ul class=uk-navbar-nav>
-                      <li><a href="#firma" uk-scroll offset="-50" duration="800">About me</a></li>
+                      <li><a href="#summary" uk-scroll offset="-50" duration="800">About me</a></li>
                       <li><a href="#services" uk-scroll offset="-15" duration="800">Offer</a></li>
                       <li><a href="#testimonials" uk-scroll offset="0" duration="800">Testimonials</a></li>
                       <li><a href="#gallery" uk-scroll offset="-15" duration="800">Gallery</a></li>
@@ -77,7 +77,7 @@
             <div class="uk-container uk-position-relative">
               <div class="uk-margin-remove-top uk-margin-remove-bottom uk-grid-margin uk-margin-remove-top uk-margin-remove-bottom" uk-grid>
                 <div class=uk-width-1-1@m>
-                  <h1 class="uk-margin-remove-top uk-margin-remove-bottom uk-width-large uk-text-center uk-dark" uk-scrollspy-class><h1><span>739-202-440</span><br /><br />
+                  <h1 class="uk-margin-remove-top uk-margin-remove-bottom uk-width-large uk-text-center uk-dark" uk-scrollspy-class><h1><span>089 4227776</span><br /><br />
                       Residential & Commercial Painting<br />
                       Interior and Exterior Painting<br />
                       Wooden Floors <br />
@@ -113,17 +113,16 @@
                 <div class=uk-panel>
                   <h1 class="uk-width-large uk-h1" uk-scrollspy-class><h1>Dave's Painting and Decorating</h1></h1>
                   <div class=uk-margin uk-scrollspy-class>
-                    <p>Offer <strong><em>interior and exterior decorating services or renovation services.</em></strong></br>
+                    <p class="uk-text-large">Offer <strong><em>interior and exterior decorating services or renovation services.</em></strong><br />
                       For over 15 years Dave's Painting and Decorating contractors specialised in interior and exterior decorating services 
-                      for both domestic and commercial clients. With the skills, experience, and equipment we can handle any type of painting project.
-                      Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.
-                      Our services include: interior and exterior painitng, wallpapering, carpentry, office painting, maintenance painting, woodwork and fascias, kitchen renovation.
-                      <br />
+                      for both domestic and commercial clients. With the skills, experience, and equipment we can handle any type of painting project.<br />
+                      Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.<br />
+                      Our services include: interior and exterior painitng, wallpapering, carpentry, office painting, maintenance painting, woodwork and fascias, kitchen renovation. <br />
                       We help in the selection of appropriate color and aesthetic solutions to satisfy the expectations of even the most demanding customers.
                       Free consultation and detailed quotes in writing will be provided prior to every contract.</p>
                   </div>
                   <div class="uk-margin uk-text-center" uk-scrollspy-class> 
-                    <a class="el-content uk-button uk-button-danger" href="#contact" uk-scroll offset="-15" duration="800">Get a quote</a> 
+                    <a class="el-content uk-button uk-margin-top uk-button-danger" href="#contact" uk-scroll offset="-15" duration="800">Get a quote</a> 
                   </div>
                 </div>
               </div>
@@ -138,7 +137,7 @@
               <div class="uk-width-1-1@s uk-margin-large">
                 <h2 class="uk-text-center" uk-scrollspy-class><p>Our Services</p></h2>
                 <blockquote uk-scrollspy-class>
-                  <p class="uk-text-center uk-text-large">Painting & Decorating, Wallpaer Hanging, Kitchen Refurbishment, Plastering, Commmertial Painting & Deocorating,
+                  <p class="uk-text-center uk-text-medium">Painting & Decorating, Wallpaper Hanging, Kitchen Refurbishment, Plastering, Commmertial Painting & Deocorating,
                   Wood Staining and Varninshing, Minor Plaster Rapair, Water Damage Repair, Furniture Painting and Restoriation, Floor Sanding & Varnishing.
                   </p>
                 </blockquote>
@@ -212,61 +211,61 @@
                       <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
                       <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
-                          <h3 class="el-title uk-margin"> usługi remontowe </h3></div>
+                          <h3 class="el-title uk-margin"> Interior Painting</h3></div>
                       </div>
-                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>usługi remontowe</h4>"></a>
+                      <a data-type="image" data-alt="Interior Painting" href="/images/three.jpg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Interior Painting</h4>"></a>
                     </div>
                   </div>
                   <div style="transform: translateY(3.08062px);" class="uk-grid-margin uk-first-column">
-                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0" uk-toggle="cls: uk-light uk-dark; mode: hover"> 
-                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                    <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/two.jpg">
                       <div class="uk-position-cover uk-transition-scale-up">
                         <img data-src="" class="el-hover-image uk-cover" alt="" uk-cover="" uk-img=""></div>
                       <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
-                          <h3 class="el-title uk-margin"> Malowanie </h3></div>
+                          <h3 class="el-title uk-margin"> Wood Staining </h3></div>
                       </div>
-                      <a data-type="image" data-alt="malowanie Poznań" href="/images/photo-1522771739844-6a9f6d5f14af-1.jpg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Malowanie</h4>"></a>
+                      <a data-type="image" data-alt="Wood Staining and Varnishing" href="/images/two.jpg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Wood Staining and Varninshing</h4>"></a>
                     </div>
                   </div>
                   <div style="transform: translateY(3.08062px);" class="uk-grid-margin uk-first-column">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
-                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/three.jpg">
                       <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
-                          <h3 class="el-title uk-margin"> Szpachlowanie </h3></div>
+                          <h3 class="el-title uk-margin"> Plastering </h3></div>
                       </div>
-                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Szpachlowanie</h4>"></a>
+                      <a data-type="image" data-alt="Plastering" href="/images/three.jpg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Plastering</h4>"></a>
                     </div>
                   </div>
                   <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
-                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/four.jpeg">
                       <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
-                          <h3 class="el-title uk-margin"> Biuro </h3></div>
+                          <h3 class="el-title uk-margin uk-light"> Kitchen Refurbishment </h3></div>
                       </div>
-                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Biuro</h4>"></a>
+                      <a data-type="image" data-alt="Kitchen Refurbishment" href="/images/four.jpeg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Kitchen Refurbishment</h4>"></a>
                     </div>
                   </div>
                   <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
-                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/five.jpg">
                       <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
-                          <h3 class="el-title uk-margin"> Budowa domów </h3></div>
+                          <h3 class="el-title uk-margin"> Exterior Painting</h3></div>
                       </div>
-                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Budowa domów</h4>"></a>
+                      <a data-type="image" data-alt="Exterior Painting" href="/images/five.jpg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Exterior Painting</h4>"></a>
                     </div>
                   </div>
                   <div class="uk-grid-margin uk-first-column" style="transform: translateY(3.08062px);">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
-                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
+                      <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/six.jpg">
                       <div class="uk-position-center">
                         <div class="uk-panel uk-padding">
-                          <h3 class="el-title uk-margin"> Mieszkanie </h3></div>
+                          <h3 class="el-title uk-margin"> Wallpaper Hanging</h3></div>
                       </div>
-                      <a data-type="iframe" href="" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Mieszkanie</h4>"></a>
+                      <a data-type="image" data-alt="Wallpaper Hanging" href="/images/six.jpg" class="uk-position-cover" data-caption="<h4 class='uk-margin-remove'>Wallpaper Hanging</h4>"></a>
                     </div>
                   </div>
                 </div>
@@ -296,7 +295,7 @@
                           <textarea class="uk-textarea" rows="9" placeholder="Your message"></textarea>
                         </div>
                         <div class="uk-margin uk-text-center" uk-scrollspy-class> 
-                          <a class="el-content uk-button uk-button-danger" href="#" >Send Message</a> 
+                          <a class="el-content uk-button uk-button-danger uk-margin-top" href="#" >Send Message</a> 
                         </div>
                       </fieldset>
                     </form>
@@ -309,7 +308,7 @@
                       <h2 class="uk-h1 uk-text-center" uk-scrollspy-class>Dave Miguel</h2>
                       <div class="uk-margin uk-text-center" uk-scrollspy-class>
                         <p>Painting and Decorating<br />
-                        Mulhuddart,<br />
+                        Mulhuddart<br />
                         co. Dublin<br />
                         </p>
                       </div>
@@ -351,13 +350,13 @@
                 <a class="uk-logo" href=""> <img src="images/logo.png" alt="PAINTING AND DECORATING">
                 </a>
                 <address>
-                  <div class="uk-margin" uk-scrollspy-class>
+                  <div class="uk-margin">
                     <p>Painting and Decorating<br />
-                    Mulhuddart,<br />
+                    Mulhuddart<br />
                     co. Dublin<br />
                     </p>
                   </div>
-                  <div class="uk-margin" uk-scrollspy-class>
+                  <div class="uk-margin">
                     <p><span uk-icon="icon: phone"></span>089 42 27 776</p>
                     <p><span uk-icon="icon: mail"></span>info@pandd.ie</p>
                   </div>
