--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
         </div>
         <!--End of navigation -->
         <!-- Header image -->
-        <div class="uk-section-default uk-section-overlap uk-position-relative uk-light" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-fade&quot;,&quot;delay&quot;:200} tm-header-transparent=light >
+        <div id="header" class="uk-section-default uk-section-overlap uk-position-relative uk-light" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-fade&quot;,&quot;delay&quot;:200} tm-header-transparent=light >
           <div class="section-background-img uk-background-norepeat uk-background-cover uk-background-center-center uk-background-fixed uk-section uk-section-large header-background-image">
             <div class="uk-container uk-position-relative">
               <div class="uk-margin-remove-top uk-margin-remove-bottom uk-grid-margin uk-margin-remove-top uk-margin-remove-bottom" uk-grid>
@@ -110,7 +110,7 @@
             </div>
             <div class="uk-width-expand@m uk-grid-item-match">
               <div class="uk-tile-default uk-tile uk-grid-item-match uk-flex-middle">
-                <div class=uk-panel>
+                <div class="uk-panel panel-about-me">
                   <h1 class="uk-width-large uk-h1" uk-scrollspy-class><h1>Dave's Painting and Decorating</h1></h1>
                   <div class=uk-margin uk-scrollspy-class>
                     <p class="uk-text-large">Offer <strong><em>interior and exterior decorating services or renovation services.</em></strong><br />
@@ -205,7 +205,7 @@
             <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid="">
               <div class="uk-width-1-1@m uk-first-column">
                 <h2><p>Gallery</p></h2>
-                <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider uk-grid uk-flex-top uk-flex-wrap-top uk-grid-stack" uk-grid="masonry: true;parallax: 300" uk-lightbox="toggle: a[data-type]" style="padding-bottom: 310px;">
+                <div class="gallery-main-container uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider uk-grid uk-flex-top uk-flex-wrap-top uk-grid-stack" uk-grid="masonry: true;parallax: 300" uk-lightbox="toggle: a[data-type]" style="padding-bottom: 310px;">
                   <div class="uk-first-column" style="transform: translateY(3.08062px);">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
                       <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
@@ -338,7 +338,7 @@
             <div class="uk-grid-large uk-child-width-expand@s uk-text-center" uk-grid>
               <div class="uk-text-left">
                 <p class="uk-text-lead">Dave Paininting & Decorating</p>
-                <ul class="uk-list">
+                <ul class="uk-list uk-text-left">
                   <li><a href="#firma" uk-scroll offset="-150" duration="800"><span uk-icon="icon: triangle-right"></span> About me</a></li>
                   <li><a href="#services" uk-scroll offset="-15" duration="800"><span uk-icon="icon: triangle-right"></span>Offer</a></li>
                   <li><a href="#testimonials" uk-scroll offset="0" duration="800"><span uk-icon="icon: triangle-right"></span>Testimonials</a></li>
@@ -349,7 +349,7 @@
               <div class="uk-text-left">
                 <a class="uk-logo" href=""> <img src="images/logo.png" alt="PAINTING AND DECORATING">
                 </a>
-                <address>
+                <address class="uk-text-left">
                   <div class="uk-margin">
                     <p>Painting and Decorating<br />
                     Mulhuddart<br />
