--- a/app/index.html
+++ b/app/index.html
@@ -295,7 +295,7 @@
                           <textarea class="uk-textarea" rows="9" placeholder="Your message"></textarea>
                         </div>
                         <div class="uk-margin uk-text-center" uk-scrollspy-class> 
-                          <a class="el-content uk-button uk-button-danger uk-margin-top" href="#" >Send Message</a> 
+                          <input type="submit" value="Send Message" class="el-content uk-button uk-button-danger uk-margin-top"></input> 
                         </div>
                       </fieldset>
                     </form>
